Lesson 2-1: Linear Regression

--- a/Lesson 2 - Regression/linear_regression.ipynb
+++ b/Lesson 2 - Regression/linear_regression.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from sklearn import datasets, linear_model, model_selection"
+    "from sklearn import datasets, linear_model, model_selection\n",
+    "# Data set: https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset"
    ]
   },
   {
@@ -104,6 +105,24 @@
     "plt.plot(X_test, y_pred, color='blue', linewidth=3)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://www.coursera.org/lecture/quantifying-relationships-regression-models/linear-vs-nonlinear-categorical-variables-ai2Ef\n",
+    "\n",
+    "- Regression analysis must be done.\n",
+    "- Restrictive model (has no dummies), has linear regression. Meaning that the value changes equally in the model.\n",
+    "- In non-linear regression model, dummies add flexibility, giving varying data. Data changes depend on value.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
